# dbx-platform

./: .gitignore  CLAUDE.md  README.md  databricks.yml  pyproject.toml  run-local.sh
.claude/: settings.json
.claude/hooks/: pytest-on-stop.sh  ruff-on-edit.sh  warn-generated-dashboard.sh
.claude/skills/add-check/: SKILL.md
.codex/environments/: environment.toml
.github/workflows/: ci.yml  claude-review.yml  claude.yml  deploy.yml  platform-triage.yml
agents/platform_agent/: agent.py  deploy_agent.py  formatting.py  tools.py
apps/platform-console/: app.py  app.yaml  console_common.py  main.py  pyproject.toml  requirements.txt
apps/platform-console/backend/: __init__.py  action_executor_client.py  app.py  cache.py  control_plane.py  control_plane_repository.py  deps.py  errors.py  estimator_extraction.py  identity.py  models.py  plans.py  platform_agent.py  proposals.py  runtime_controller_client.py
apps/platform-console/pages/: 1_AI_ML.py  (+3 more)
dashboards/: ai_app_monitoring.lvdash.json  ai_model_catalog.lvdash.json  azure_cost_forecast.lvdash.json  dbsql_cost_performance.lvdash.json  job_operations_cost.lvdash.json  lineage_catalog_utilization.lvdash.json  platform_command_center.lvdash.json  unified_cost_analysis.lvdash.json
dashboards/templates/: ai_app_monitoring.lvdash.json  ai_model_catalog.lvdash.json  azure_cost_forecast.lvdash.json  job_operations_cost.lvdash.json  platform_command_center.lvdash.json
docs/: ai-cost-planner-implementation-plan.md  cloud-setup.md  data-load-integrity.md  design-review-console-ux.md  enterprise-migration-audit.md  runbook.md  secrets.md  service-principal.md  setup.md
docs/ui-redesign-mockups/: README.md  generate-brand-drafts.mjs  generate-creative-drafts.mjs  generate-neutral-mockups.mjs
policies/: autotermination_required.json  gpu_training.json  small_jobs_only.json
resources/: action_executor.yml  ai_catalog_jobs.yml  ai_monitor_jobs.yml  app.yml  azure_cost_jobs.yml  cost_jobs.yml  dashboards.yml  dashboards_jobs.yml  estimator_jobs.yml  forecast_jobs.yml  governance_jobs.yml  housekeeping_jobs.yml  llm_cost_jobs.yml  migrations.yml  ml_jobs.yml  report_jobs.yml  runtime_control.yml  security_jobs.yml
scripts/: upsert_triage_issue.py  verify_executor_identity.sh
src/dbx_platform/: __init__.py  _review_probe.py  action_executor.py  ai_catalog.py  ai_monitor.py  approved_job.py  azure_cost.py  cli.py  client.py  config.py  control_plane_procedures.py  control_plane_schema.py  cost.py  dashboards.py  digest.py  estimator.py  estimator_extract.py  estimator_monitor.py  estimator_pricing.py  estimator_prompts.py  forecast_features.py  forecast_infer.py  forecast_monitor.py  forecast_train.py  governance.py  housekeeping.py  impact_measurement.py  llm_cost.py  migrations.py  ml.py  operational.py  release.py  resource_identifiers.py  runtime_control.py  secrets.py  security.py  system_tables.py
tests/: conftest.py  test_action_executor.py  test_agent.py  test_agent_estimator_tools.py  test_agent_llm_scope.py  test_ai_catalog.py  test_ai_compliance.py  test_ai_monitor.py  test_app.py  test_appkit_queries.py  test_approved_job.py  test_azure_cost.py  test_cli_safety.py  test_control_plane.py  test_control_plane_procedures.py  test_control_plane_schema.py  test_cost.py  test_dashboards.py  test_deploy_workflow.py  test_digest.py  test_estimator.py  test_estimator_api.py  test_estimator_extract.py  test_estimator_monitor.py  test_estimator_pricing.py  test_forecast_features.py  test_forecast_monitor.py  test_forecast_train.py  test_governance.py  test_housekeeping.py  test_impact_measurement.py  test_llm_cost.py  test_llm_cost_api.py  test_ml.py  test_operational.py  test_performance_router.py  test_resource_identifiers.py  test_resource_tags.py  test_runtime_control.py  test_secrets.py  (+2 more)
(+156 files in other folders)
