[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbx-platform"
description = "Databricks platform management toolkit: admin CLI, scheduled jobs, and dashboards"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
    "databricks-sdk==0.120.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.17",
    "azure-keyvault-secrets>=4.8",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "build>=1.2",
    "pyyaml>=6.0",
]
# The served LangGraph agent (agents/platform_agent) — kept out of the core
# wheel so scheduled jobs stay lean.
agent = [
    "mlflow>=3.0",
    "langgraph>=0.2",
    "databricks-langchain>=0.4",
    "databricks-agents>=1.0",
]

[project.scripts]
dbx-platform = "dbx_platform.cli:main"

[tool.hatch.version]
path = "src/dbx_platform/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dbx_platform"]

# Ship the cluster-policy definitions inside the wheel so the scheduled
# governance job (which has no repo checkout) can run the drift report.
[tool.hatch.build.targets.wheel.force-include]
"policies" = "dbx_platform/policies"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
