[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbx-platform"
description = "AI Mission Control for governed Databricks cost, security, risk, and performance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
    "databricks-sdk==0.120.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.17",
    "azure-keyvault-secrets>=4.8",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "build>=1.2",
    "pyyaml>=6.0",
    # Offline TestClient tests for the Platform Console backend (tests/test_app.py)
    "fastapi>=0.110",
    "httpx>=0.27",
]
# The Azure cost forecaster's training/inference deps — kept out of the core
# wheel; the forecast jobs' serverless environment installs them alongside
# the wheel (see resources/forecast_jobs.yml).
forecast = [
    "mlflow>=3.0",
    "lightgbm>=4.3",
    "pandas>=2.0",
]
# The read-only LangGraph chat agent's runtime, run in-process by the Platform
# Console (apps/platform-console installs dbx-platform[chat]). Kept out of the
# core wheel so scheduled jobs stay lean. This is a deliberate departure from
# the earlier "served endpoint only" design: the read-only app now carries the
# langchain/langgraph surface so chat works without a deployed serving endpoint.
chat = [
    "langgraph>=0.2",
    "databricks-langchain>=0.4",
]
# The optional MLflow-served deployment of the same graph (agents/platform_agent
# wraps it as a ResponsesAgent). Adds the packaging/serving deps on top of chat.
# Serving is still gated behind an approved model-deploy action; see runbook.
agent = [
    "dbx-platform[chat]",
    "mlflow>=3.0",
    "databricks-agents>=1.0",
]

[project.scripts]
dbx-platform = "dbx_platform.cli:entry"

[tool.hatch.version]
path = "src/dbx_platform/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dbx_platform"]

# Ship the cluster-policy definitions inside the wheel so the scheduled
# governance job (which has no repo checkout) can run the drift report.
[tool.hatch.build.targets.wheel.force-include]
"policies" = "dbx_platform/policies"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
